--- a/bridge_ui/package.json
+++ b/bridge_ui/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "recharts": "^2.1.9",
     "redux": "^3.7.2",
     "use-debounce": "^7.0.0"
   },
