solana: bridge: Fix tests
Fix all the tests for the solana bridge program so that we can start
running it in CI.

Use the `solana-program-test` crate as the test framework. Previously,
running the tests required spinning up a test validator and manually
deploying the program there. Now developers can just do `cargo test-bpf`
to run the tests without needing any additional setup (beyond installing
the solana tools). This also lets us split out the tests so that they
can be run separately rather than having to run everything sequentially
in a single integration test.

commit-id:3af91f5f

--- a/solana/Dockerfile
+++ b/solana/Dockerfile
@@ -57,3 +57,14 @@ ENV RUST_BACKTRACE=1
 
 FROM scratch AS export-stage
 COPY --from=builder /opt/solana/deps /
+
+ARG CI=False
+
+RUN --mount=type=cache,target=bpf-test \
+    echo "${CI}" \
+    if [[ "${CI}" == "True" ]]; then \
+        cargo test-bpf \
+            --manifest-path bridge/program/Cargo.toml \
+            --bpf-out-dir target-test \
+            --features trace,instructions \
+    fi
